# br_esw_candidate_task

./: .gitignore  CMakeLists.txt  Makefile  README.md  relay_controller_demo  simulation_log.txt
docs/: BR_ESW_Relay_Controller_Solution.txt  architecture.md  simulation_log.txt
docs/plantuml/: controller_process.puml  controller_state.puml  fault_notification.puml  module_decomposition.puml  per_relay_flow.puml
scenarios/: constantly_open.csv  welded.csv
scripts/: fetch_googletest.sh
simulation_scenarios/: constantly_open.csv  welded.csv
src/: main.c
src/relay_control/: common.h  relay_controller.c  relay_controller.h  relay_instance.c  relay_instance.h  relay_log.h  relay_log_host.c  relay_types.h
src/relay_io/: relay_io.h  relay_io_hw.c  relay_io_sim.c  relay_io_sim.h
src/scenario/: scenario_csv.c  scenario_csv.h
src/scheduler/: scheduler.c  scheduler.h
test/: CMakeLists.txt  main.cpp  relay_controller_test.cpp  relay_instance_test.cpp  relay_test_fixture.h  scheduler_test.cpp
test/include/test/: common.h
